<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

    <TextView
        android:id="@+id/tv_wifi_name"
        style="@style/ww"
        android:layout_marginTop="90dp"
        android:text="@string/WIFI_Name"
        android:textColor="@color/bb_black"
        android:textSize="@dimen/text_size_big" />

    <EditText
        android:id="@+id/et_wifi"
        style="@style/set_text"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/tv_wifi_name"
        android:layout_alignBottom="@+id/tv_wifi_name"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tv_wifi_name"
        android:background="@drawable/act_wifi_whitebtn"
        android:ems="10"
        android:focusable="true"
        android:hint="@string/WIFI_Hint_Name"
        android:paddingLeft="10dp"
        android:textColor="#3e3a39" />

    <TextView
        android:id="@+id/tv_wifi_password"
        style="@style/ww"
        android:layout_below="@id/tv_wifi_name"
        android:layout_marginTop="30dp"
        android:text="@string/WIFi_Password"
        android:textColor="@color/bb_black"
        android:textSize="@dimen/text_size_big" />

    <EditText
        android:id="@+id/et_wifi_password"
        style="@style/set_text"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/tv_wifi_password"
        android:layout_alignParentBottom="@+id/tv_wifi_password"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tv_wifi_password"
        android:background="@drawable/act_wifi_whitebtn"
        android:ems="10"
        android:focusable="true"
        android:paddingLeft="10dp"
        android:password="true"
        android:saveEnabled="true"
        android:text="@string/WIFI_Hint_Name" />
    <!-- android:layout_height="@dimen/login_edit_height" -->
    <!-- android:layout_width="@dimen/login_botton_width" -->

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/et_wifi_password"
        android:layout_alignTop="@+id/tv_wifi_password"
        android:layout_marginRight="10dp"
        android:text="@string/Show_Password"
        android:textColor="#00a0e9" />

    <TextView
        android:id="@+id/tv_scremit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/et_wifi_password"
        android:layout_alignTop="@+id/tv_wifi_password"
        android:layout_marginRight="10dp"
        android:text="@string/Hide_Password"
        android:textColor="#00a0e9"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/LinearLayout"
        style="@style/set_text"
        android:layout_width="fill_parent"
        android:layout_below="@+id/tv_wifi_password"
        android:layout_marginRight="20dp"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:visibility="gone" >

        <Button
            android:id="@+id/btn_oranger_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:background="@drawable/selector_wifimanger_btn"
            android:text="@string/Update_Wifi_Save"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_oranger_connecton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/wifiadministration_05"
            android:text="@string/Connectoned_Phone"
            android:textColor="@color/bb_cyan" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_wifi_update"
        style="@style/set_text"
        android:layout_width="@dimen/login_botton_width"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/selector_login"
        android:gravity="center"
        android:text="@string/Update_Wifi_Update"
        android:textColor="@android:color/white"
        android:visibility="visible" />

    <Button
        android:id="@+id/btn_connection_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_wifi_update"
        android:layout_alignRight="@+id/btn_wifi_update"
        android:layout_below="@+id/btn_wifi_update"
        android:layout_marginTop="10dp"
        android:background="@drawable/wifiadministration_05"
        android:text="@string/Connectoned_Phone"
        android:textColor="@color/bb_cyan" />

</RelativeLayout>