<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dark"
    android:orientation="vertical" >

    <include
        android:id="@+id/title_password"
        layout="@layout/frgact_main_title" />

    <TextView
        android:id="@+id/tv_password_pass"
        style="@style/set_text"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/login_marginright"
        android:layout_marginTop="20dp"
        android:text="@string/pass"
        android:textColor="@color/bb_gray2"
        android:textSize="@dimen/text_size_big" />

    <RelativeLayout
        style="@style/mw"
        android:layout_marginLeft="@dimen/login_marginright"
        android:layout_marginRight="@dimen/login_marginright"
        android:layout_marginTop="60dp" >

        <EditText
            android:id="@+id/edit_smss_setpassword"
            style="@style/mw"
            android:layout_height="@dimen/login_edit_height"
            android:layout_marginTop="20dp"
            android:background="@drawable/act_login_verifi"
            android:gravity="center"
            android:hint="@string/set_password"
            android:textCursorDrawable="@drawable/password_cursor"
            android:textSize="@dimen/text_size_middle" />

        <EditText
            android:id="@+id/edit_smss_confirepassword"
            style="@style/mw"
            android:layout_height="@dimen/login_edit_height"
            android:layout_below="@+id/edit_smss_setpassword"
            android:layout_marginTop="10dp"
            android:background="@drawable/act_login_verifi"
            android:gravity="center"
            android:hint="@string/confire_password"
            android:textCursorDrawable="@drawable/password_cursor"
            android:textSize="@dimen/text_size_middle" />

        <Button
            android:id="@+id/btn_password_sure"
            style="@style/set_text"
            android:layout_width="@dimen/login_botton_width"
            android:layout_height="@dimen/login_sure_height"
            android:layout_below="@+id/edit_smss_confirepassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:background="@drawable/selector_login"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_biggest" />
    </RelativeLayout>

</LinearLayout>