<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dark" >

    <include
        android:id="@+id/title_feddback"
        layout="@layout/frgact_main_title" />

    <EditText
        android:id="@+id/edit_feedback"
        style="@style/mw"
        android:layout_below="@+id/title_feddback"
        android:layout_marginLeft="@dimen/marginleft"
        android:layout_marginRight="@dimen/marginleft"
        android:layout_marginTop="@dimen/marginTitle"
        android:background="@drawable/act_sign_edit_bg"
        android:gravity="top"
        android:hint="@string/hint_feedback"
        android:padding="10dp"
        android:textSize="@dimen/text_size_bigger" />

    <TextView
        android:id="@+id/tv_feedback_send"
        style="@style/set_text"
        android:layout_height="45dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:text="@string/send"
        android:textColor="@color/yellow"
        android:textSize="@dimen/text_size_big" />

    <TextView
        style="@style/set_text"
        android:layout_alignBottom="@+id/edit_feedback"
        android:layout_alignRight="@+id/edit_feedback"
        android:padding="5dp"
        android:text="200"
        android:textSize="@dimen/smalltextsize" />

    <EditText
        android:id="@+id/edit_feedback_phone"
        style="@style/mw"
        android:layout_height="@dimen/gender_item_height"
        android:layout_below="@+id/edit_feedback"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/act_name_edit_bg"
        android:gravity="top"
        android:inputType="number"
        android:hint="@string/hint_feedback_phone"
        android:padding="10dp"
        android:textSize="@dimen/text_size_bigger" />

</RelativeLayout>